[workspace]
members = ["contracts/*", "packages/*"]
resolver = "2"

[workspace.package]
version       = "0.2.0"
edition       = "2021"
license       = "MPL-2.0"
homepage      = "https://apollo.farm"
repository    = "https://github.com/apollodao/liquidity-helpers"
keywords      = ["cosmwasm", "liquidity", "provision", "osmosis", "astroport"]
rust-version  = "1.64.0"

[workspace.dependencies]
cosmwasm-std      = "1.3.2"
cosmwasm-schema   = "1.3.2"
cw2               = "1.1.0"
cw20              = "1.1.0"
cw-storage-plus   = "1.1.0"
thiserror         = "1.0.45"
apollo-cw-asset   = "0.1.2"
cw-dex            = "0.4.0-rc.1"
apollo-utils      = "0.1.1"
cw-bigint         = "0.4.3"
liquidity-helper  = { version = "0.2.0", path = "./packages/liquidity-helper" }

# Dev dependencies
cw-it             = "0.1.2"
test-case         = "3.1.0"

[profile.release]
codegen-units     = 1
debug             = false
debug-assertions  = false
incremental       = false
lto               = true
opt-level         = 3
overflow-checks   = true
rpath             = false
